[gd_scene load_steps=22 format=2]

[ext_resource path="res://Item/Item.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/glow/glow-low.png" type="Texture" id=2]
[ext_resource path="res://Assets/Objects/bone .png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/glow/glow-high.png" type="Texture" id=4]
[ext_resource path="res://Assets/Objects/takeDrop.png" type="Texture" id=5]
[ext_resource path="res://Assets/Objects/glow/glow-med.png" type="Texture" id=6]
[ext_resource path="res://Assets/Objects/rock.png" type="Texture" id=7]
[ext_resource path="res://Assets/Objects/portrait.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/Raleway-Bold.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Assets/Objects/plate.png" type="Texture" id=10]
[ext_resource path="res://Assets/Objects/teapot.png" type="Texture" id=11]
[ext_resource path="res://Assets/Objects/medallion.png" type="Texture" id=12]
[ext_resource path="res://Assets/Objects/page3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Objects/page1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Objects/page2.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 379.803

[sub_resource type="CapsuleShape2D" id=3]
radius = 152.206

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.00769231, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 9 )

[node name="Item" type="StaticBody2D"]
visible = false
position = Vector2( 711.063, -16.6409 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.291962, -1.45978 )
scale = Vector2( 0.1, 0.1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.291962, -1.45978 )
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.600586
margin_right = -0.600586
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bone" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 125.099 )
texture = ExtResource( 3 )

[node name="Rocks" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="Portrait" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="Teapot" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 11 )

[node name="Plate" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[node name="Medallion" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 12 )

[node name="Page1" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 14 )

[node name="Page2" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )

[node name="Page3" type="Sprite" parent="CanvasLayer/Control"]
visible = false
position = Vector2( 476.559, 183 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 13 )

[node name="TakeDrop" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 479.927, 401.969 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Control"]
position = Vector2( 479.824, 50.5943 )
scale = Vector2( 0.276697, 39.26 )
texture = SubResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 197.0
margin_top = 37.0
margin_right = 762.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]It appears to be the portrait...[/center]"
text = "It appears to be the portrait..."
__meta__ = {
"_edit_use_anchors_": false
}
